--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,43 +1,37 @@
+@import "../../styles/variables";
+
 .navbar {
     width: 83rem;
-    height: 3.5remm;
+    height: 3.5rem;
     margin-top: 1.5rem;
     display: flex;
-    flex-direction: space-around;
     align-items: center;
     padding: 0 0 24px 0;
-    border-bottom: 1px solid #d7dde9;
+    border-bottom: 1px solid $background-light;
 }
 
 .navbar-logo {
     width: 30%;
-    height: 100%;
     display: flex;
     gap: 1rem;
-
-    h1 {
-        color: #101828;
-    }
 }
 
 .nav-greetings-container {
     width: 40%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 
     h2 {
-        color: #000000;
+        color: $text-black;
         font-size: 24px;
         line-height: 29.04px;
-        font-weight: 500;
+        font-weight: $font-weight-medium;
     }
 }
 
 .navbar-date {
     width: 30%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: end;
@@ -46,6 +40,6 @@
         color: #0000008a;
         line-height: 19.36px;
         font-size: 1rem;
-        font-weight: 400;
+        font-weight: $font-weight-regular;
     }
 }
