--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -5,3 +5,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.tasklist-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
