--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,20 +1,21 @@
 // cores
-$primary-color: #0796D3; 
-$secondary-color: #53C0F0; 
-$accent-color: #D30707; 
-$background-color: #F7F9FD; 
+$primary-color: #0796d3;
+$secondary-color: #53c0f0;
+$accent-color: #d30707;
+$background-color: #f7f9fd;
 $text-color: #101828;
 $text-black: #000000;
+$text-white: #ffffff;
 $text-black-transparent: rgba($text-black, 0.54);
 
 // gradientes
-$linear-gradient-primary: linear-gradient(100%, #0796D3, #53C0F0);
-$linear-gradient-accent: linear-gradient(100%, #D30707, #F05353);
-$background-light: #D7DDE9; 
-$background-white: #FFFFFF; 
-$background-grey: #EAECF0; 
-$background-dark: #000000; 
-$accent-light: #A0DCF6; 
+$linear-gradient-primary: linear-gradient(100%, #0796d3, #53c0f0);
+$linear-gradient-accent: linear-gradient(100%, #d30707, #f05353);
+$background-light: #d7dde9;
+$background-white: #ffffff;
+$background-grey: #eaecf0;
+$background-dark: #000000;
+$accent-light: #a0dcf6;
 
 // tamanhos de fonte
 $font-size-xs: 0.75rem; // 12px
