feat: Item Task da Tasklist adicionado

--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -26,6 +26,7 @@
     background: $linear-gradient-primary;
     font-size: $font-size-md;
     color: $text-white;
+    font-weight: $font-weight-medium;
     border: none;
     border-radius: 8px;
     display: flex;
