--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,8 +9,8 @@ $text-white: #ffffff;
 $text-black-transparent: rgba($text-black, 0.54);
 
 // gradientes
-$linear-gradient-primary: linear-gradient(100%, #0796d3, #53c0f0);
-$linear-gradient-accent: linear-gradient(100%, #d30707, #f05353);
+$linear-gradient-primary: linear-gradient(180deg, #0796d3, #53c0f0);
+$linear-gradient-accent: linear-gradient(180deg, #d30707, #f05353);
 $background-light: #d7dde9;
 $background-white: #ffffff;
 $background-grey: #eaecf0;
