feat: adicionadas áreas de tarefas por fazer e tarefas feitas

--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -1,7 +1,6 @@
 @import "./variables.scss";
-
 .task-container {
-    width: 24.125;
+    width: 24.125rem;
     height: 3.5rem;
     display: flex;
     justify-content: space-between;
@@ -9,4 +8,5 @@
     padding: 16px;
     gap: 16px;
     border: 1px dashed $background-light;
+    margin-bottom: 1rem;
 }
