--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -1,5 +1,4 @@
 @import "./variables.scss";
-
 .tasklist {
     width: 28.125rem;
     height: 50%;
@@ -18,6 +17,32 @@
     padding: 24px;
     gap: 24px;
     margin-bottom: 1.5rem;
+}
+
+.tasklist-todo {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    p {
+        font-size: $font-size-md;
+        margin-bottom: 1rem;
+        color: $text-black-transparent;
+    }
+}
+
+.tasklist-done {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    p {
+        font-size: $font-size-md;
+        margin-bottom: 1rem;
+        color: $text-black-transparent;
+    }
 }
 
 .button-create {
