feat: Modal para criar a task

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@ $text-black-transparent: rgba($text-black, 0.54);
 $linear-gradient-primary: linear-gradient(180deg, #0796d3, #53c0f0);
 $linear-gradient-accent: linear-gradient(180deg, #d30707, #f05353);
 $background-light: #d7dde9;
+$background-gray-200: #E7EEFB;
 $background-white: #ffffff;
 $background-grey: #eaecf0;
 $background-gray-100:#B0BBD1;
