--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -1,3 +1,4 @@
+@import "./variables.scss";
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -12,16 +13,74 @@
 }
 
 .modalContent {
+    width: 28.125rem;
     background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 400px;
+    padding: 2rem;
+    border-radius: 16px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    h2 {
+        font-size: $font-size-xxl;
+        font-weight: $font-weight-medium;
+        line-height: 29.04px;
+        margin-bottom: 1.5rem;
+    }
+}
+
+.form-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    label {
+        font-weight: $font-weight-regular;
+        margin-bottom: 0.4rem;
+    }
+    input {
+        width: 24.125rem;
+        height: 3.1875rem;
+        padding: 1rem;
+        border-radius: 8px;
+        border: 1px solid $background-light;
+        gap: 8px;
+    }
+}
+
+.buttons-actions-container {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .closeButton {
-    background: transparent;
+    width: 11.5625rem;
+    height: 3.1875rem;
     border: none;
+    background: $background-gray-200;
+    border-radius: 8px;
+    font-weight: $font-weight-regular;
+    padding: 16px, 24px, 16px, 24px;
+    font-size: $font-size-sm;
     cursor: pointer;
-    margin-bottom: 10px;
+}
+
+.addButton {
+    width: 11.5625rem;
+    height: 3.1875rem;
+    border: none;
+    background: $linear-gradient-primary;
+    border-radius: 8px;
+    font-weight: $font-weight-medium;
+    color: $text-white;
+    padding: 16px, 24px, 16px, 24px;
+    font-size: $font-size-sm;
+    cursor: pointer;
 }
