--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.85);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,7 @@
     background-color: white;
     padding: 2rem;
     border-radius: 16px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 24px 48px -12px $background-gray-800;
     h2 {
         font-size: $font-size-xxl;
         font-weight: $font-weight-medium;
@@ -48,6 +48,7 @@
         height: 3.1875rem;
         padding: 1rem;
         border-radius: 8px;
+        font-size: $font-size-md;
         border: 1px solid $background-light;
         gap: 8px;
     }
@@ -60,6 +61,15 @@
     justify-content: space-between;
 }
 
+.delete-container {
+    display: flex;
+    flex-direction: column;
+    p {
+        color: $text-black-transparent;
+        margin-bottom: 2rem;
+    }
+}
+
 .closeButton {
     width: 11.5625rem;
     height: 3.1875rem;
@@ -68,7 +78,7 @@
     border-radius: 8px;
     font-weight: $font-weight-regular;
     padding: 16px, 24px, 16px, 24px;
-    font-size: $font-size-sm;
+    font-size: $font-size-md;
     cursor: pointer;
 }
 
@@ -81,6 +91,19 @@
     font-weight: $font-weight-medium;
     color: $text-white;
     padding: 16px, 24px, 16px, 24px;
-    font-size: $font-size-sm;
+    font-size: $font-size-md;
+    cursor: pointer;
+}
+
+.deleteButton {
+    width: 11.5625rem;
+    height: 3.1875rem;
+    border: none;
+    background: $linear-gradient-accent;
+    border-radius: 8px;
+    font-weight: $font-weight-medium;
+    color: $text-white;
+    padding: 16px, 24px, 16px, 24px;
+    font-size: $font-size-md;
     cursor: pointer;
 }
