--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -17,6 +17,7 @@
     padding: 24px;
     gap: 24px;
     margin-bottom: 1.5rem;
+    box-shadow: 0 1px 2px 0 $background-gray-700;
 }
 
 .tasklist-todo {
