--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,14 +8,16 @@ $text-black: #000000;
 $text-white: #ffffff;
 $text-black-transparent: rgba($text-black, 0.54);
 // gradientes
-$linear-gradient-primary: linear-gradient(180deg, #0796d3, #53c0f0);
-$linear-gradient-accent: linear-gradient(180deg, #d30707, #f05353);
+$linear-gradient-primary: linear-gradient(90deg, #0796d3, #53c0f0);
+$linear-gradient-accent: linear-gradient(90deg, #d30707, #f05353);
 $background-light: #d7dde9;
 $background-gray-200: #E7EEFB;
 $background-white: #ffffff;
 $background-grey: #eaecf0;
 $background-gray-100:#B0BBD1;
+$background-gray-800:#1018282E;
 $background-dark: #000000;
+$background-gray-700: #1018280D;
 $accent-light: #a0dcf6;
 // tamanhos de fonte
 $font-size-xs: 0.75rem; // 12px
