--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -10,6 +10,9 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    @media screen and (max-width: $breakpoint-sm) {
+        align-items: flex-start;
+    }
 }
 
 .modalContent {
@@ -23,6 +26,10 @@
         font-weight: $font-weight-medium;
         line-height: 29.04px;
         margin-bottom: 1.5rem;
+    }
+    @media screen and (max-width: $breakpoint-sm) {
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -56,9 +63,18 @@
 
 .buttons-actions-container {
     width: 100%;
-    height: 3rem;
+    height: auto;
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: $breakpoint-sm) {
+        flex-direction: column;
+    }
+    button {
+        @media screen and (max-width: $breakpoint-sm) {
+            width: 89%;
+            margin-bottom: 1rem;
+        }
+    }
 }
 
 .delete-container {
@@ -73,8 +89,8 @@
 .closeButton {
     width: 11.5625rem;
     height: 3.1875rem;
-    border: none;
     background: $background-gray-200;
+    border: none;
     border-radius: 8px;
     font-weight: $font-weight-regular;
     padding: 16px, 24px, 16px, 24px;
@@ -85,8 +101,8 @@
 .addButton {
     width: 11.5625rem;
     height: 3.1875rem;
-    border: none;
     background: $linear-gradient-primary;
+    border: none;
     border-radius: 8px;
     font-weight: $font-weight-medium;
     color: $text-white;
@@ -98,8 +114,8 @@
 .deleteButton {
     width: 11.5625rem;
     height: 3.1875rem;
-    border: none;
     background: $linear-gradient-accent;
+    border: none;
     border-radius: 8px;
     font-weight: $font-weight-medium;
     color: $text-white;
