--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+
     @media screen and (max-width: $breakpoint-sm) {
         align-items: flex-start;
     }
@@ -17,9 +18,10 @@
 
 .modalContent {
     width: 28.125rem;
-    background-color: white;
+    background-color: $background-white;
     padding: 2rem;
     border-radius: 16px;
+
     box-shadow: 0 24px 48px -12px $background-gray-800;
     h2 {
         font-size: $font-size-xxl;
