--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+
 .task-container {
     width: 24.125rem;
     height: 3.5rem;
@@ -9,6 +10,7 @@
     gap: 16px;
     border: 1px dashed $background-light;
     margin-bottom: 1rem;
+
     &:hover {
         background: $background-color;
         border: none;
@@ -21,9 +23,14 @@
     display: flex;
     align-items: center;
     gap: 13px;
-    input[type='checkbox'] {
+
+    input[type="checkbox"] {
         width: 1.5rem;
         height: 1.5rem;
+
+        :checked {
+            text-decoration: line-through;
+        }
     }
 }
 
@@ -31,7 +38,8 @@
     border: none;
     background: transparent;
     cursor: pointer;
-    >svg {
+
+    > svg {
         color: $background-gray-100;
         font-size: $font-size-xxl;
     }
