--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 .navbar {
-    width: 83rem;
+    width: 90%;
     height: 3.5rem;
     margin-top: 1.5rem;
     display: flex;
@@ -10,38 +10,74 @@
     padding: 0 0 24px 0;
     border-bottom: 1px solid $background-light;
 
-    h2 {
-        color: $text-black;
-        font-size: $font-size-xxl;
-        line-height: 29.04px;
-        font-weight: $font-weight-medium;
-
-        @media screen and (max-width: $breakpoint-sm) {
-            font-size: $font-size-md;
-        }
-    }
-
-    p {
-        color: $text-black-transparent;
-        line-height: 19.36px;
-        font-size: $font-size-md;
-        font-weight: $font-weight-regular;
-    }
-
     @media screen and (max-width: $breakpoint-sm) {
-        width: 17rem;
+        width: 80%;
         height: 7.125rem;
+        justify-content: flex-start;
+        align-items: flex-start;
         flex-direction: column;
     }
 }
 
 .navbar-logo {
-    width: 20%;
+    width: 30%;
     display: flex;
     gap: 1rem;
 
     @media screen and (max-width: $breakpoint-sm) {
+        width: 44%;
+        margin-bottom: 0.6rem;
+    }
+
+    @media screen and (max-width: $breakpoint-xs) {
+        width: 55%;
+        margin-bottom: 0.6rem;
+    }
+}
+
+.nav-greetings-container {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+        color: $text-black;
+        font-size: $font-size-xxl;
+        font-weight: $font-weight-medium;
+
+        @media screen and (max-width: $breakpoint-xl) {
+            font-size: $font-size-xl;
+        }
+        @media screen and (max-width: $breakpoint-lg) {
+            font-size: $font-size-lg;
+        }
+        @media screen and (max-width: $breakpoint-md) {
+            font-size: $font-size-md;
+        }
+    }
+
+    @media screen and (max-width: $breakpoint-sm) {
         width: 100%;
-        justify-content: start;
+        justify-content: flex-start;
+        margin-bottom: 0.5rem;
+    }
+}
+
+.navbar-date {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+
+    p {
+        color: $text-black-transparent;
+        font-size: $font-size-md;
+        font-weight: $font-weight-regular;
+    }
+
+    @media screen and (max-width: $breakpoint-sm) {
+        width: 100%;
+        justify-content: flex-start;
     }
 }
