--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -1,12 +1,12 @@
 @import "./variables.scss";
 
 .task-container {
-    width: 24.125rem;
+    width: 100%;
     height: 3.5rem;
     display: flex;
     justify-content: space-between;
     border-radius: 8px;
-    padding: 16px;
+    padding: 1rem;
     gap: 16px;
     border: 1px dashed $background-light;
     margin-bottom: 1rem;
