--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -6,19 +6,29 @@
     margin-top: 3rem;
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: $breakpoint-sm) {
+        width: 80%;
+        margin-top: 2rem;
+        height: auto;
+    }
 }
 
 .tasklist-elements-container {
-    width: 28.125rem;
+    width: 100%;
     height: 27.875rem;
     border: 1px solid $background-grey;
     display: flex;
     flex-direction: column;
     border-radius: 16px;
-    padding: 24px;
+    padding: 1.5rem;
     gap: 24px;
     margin-bottom: 1.5rem;
     box-shadow: 0 1px 2px 0 $background-gray-700;
+
+    @media screen and (max-width: $breakpoint-sm) {
+        padding: 2rem;
+    }
 }
 
 .tasklist-todo {
@@ -49,7 +59,7 @@
 }
 
 .button-create {
-    width: 28.125rem;
+    width: 100%;
     height: 3.1875rem;
     background: $linear-gradient-primary;
     font-size: $font-size-md;
