--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -22,14 +22,14 @@
     background-color: $background-white;
     padding: 2rem;
     border-radius: 16px;
-
     box-shadow: 0 24px 48px -12px $background-gray-800;
+
     h2 {
         font-size: $font-size-xxl;
         font-weight: $font-weight-medium;
-        line-height: 29.04px;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.7rem;
     }
+
     @media screen and (max-width: $breakpoint-sm) {
         width: 100%;
         height: 100%;
@@ -48,13 +48,15 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    margin-bottom: 2rem;
+    margin: 0.5rem 0 2rem 0;
+
     label {
         font-weight: $font-weight-regular;
-        margin-bottom: 0.4rem;
+        margin-bottom: 0.5rem;
+        font-size: $font-size-md;
     }
     input {
-        width: 24.125rem;
+        width: 100%;
         height: 3.1875rem;
         padding: 1rem;
         border-radius: 8px;
@@ -69,11 +71,13 @@
     height: auto;
     display: flex;
     justify-content: space-between;
+
     @media screen and (max-width: $breakpoint-sm) {
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
+
     button {
-        width: 11.5625rem;
+        width: 48%;
         height: 3.1875rem;
         border: none;
         border-radius: 8px;
@@ -81,8 +85,9 @@
         padding: 16px, 24px, 16px, 24px;
         font-size: $font-size-md;
         cursor: pointer;
+
         @media screen and (max-width: $breakpoint-sm) {
-            width: 89%;
+            width: 100%;
             margin-bottom: 1rem;
         }
     }
