--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -23,6 +23,7 @@
     width: 30%;
     display: flex;
     gap: 1rem;
+    cursor: pointer;
 
     @media screen and (max-width: $breakpoint-sm) {
         width: 44%;
