--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -1,8 +1,8 @@
 @import "./variables.scss";
 
 .task-container {
-    width: 100%;
-    height: 3.5rem;
+    min-width: 100%;
+    min-height: 3.5rem;
     display: flex;
     justify-content: space-between;
     border-radius: 8px;
@@ -27,8 +27,9 @@
     input[type="checkbox"] {
         width: 1.5rem;
         height: 1.5rem;
+        flex-shrink: 0;
 
-        :checked {
+        &:checked + span {
             text-decoration: line-through;
         }
     }
