--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -28,6 +28,7 @@
 
     @media screen and (max-width: $breakpoint-sm) {
         padding: 2rem;
+        min-height: 26.75rem;
     }
 }
 
@@ -51,6 +52,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+
     p {
         font-size: $font-size-md;
         margin-bottom: 1.5rem;
