--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -28,9 +28,44 @@
         width: 1.5rem;
         height: 1.5rem;
         flex-shrink: 0;
+        border-radius: 4px;
+        border: 1px;
+        cursor: pointer;
+
+        &:checked {
+            appearance: none;
+            background-color: $accent-light;
+            border: 1px solid $primary-color;
+            border-radius: 4px;
+            position: relative;
+
+            &::after {
+                content: url("/Icon.png");
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-size: cover;
+            }
+        }
 
         &:checked + span {
             text-decoration: line-through;
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 0.5rem;
+                height: 0.5rem;
+                border: solid white;
+                border-width: 0 2px 2px 0;
+                transform: translate(-50%, -50%) rotate(45deg);
+            }
         }
     }
 }
