--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -29,14 +29,13 @@
         height: 1.5rem;
         flex-shrink: 0;
         border-radius: 4px;
-        border: 1px;
+        border: 1px solid $background-gray-100;
         cursor: pointer;
+        appearance: none;
 
         &:checked {
-            appearance: none;
             background-color: $accent-light;
             border: 1px solid $primary-color;
-            border-radius: 4px;
             position: relative;
 
             &::after {
@@ -53,19 +52,6 @@
 
         &:checked + span {
             text-decoration: line-through;
-            position: relative;
-
-            &::after {
-                content: "";
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 0.5rem;
-                height: 0.5rem;
-                border: solid white;
-                border-width: 0 2px 2px 0;
-                transform: translate(-50%, -50%) rotate(45deg);
-            }
         }
     }
 }
