--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,13 +13,13 @@ $linear-gradient-primary: linear-gradient(90deg, #0796d3, #53c0f0);
 $linear-gradient-accent: linear-gradient(90deg, #d30707, #f05353);
 $background-white: #ffffff;
 $background-light: #d7dde9;
-$background-gray-200: #E7EEFB;
+$background-gray-200: #e7eefb;
 $background-white: #ffffff;
 $background-grey: #eaecf0;
-$background-gray-100:#B0BBD1;
-$background-gray-800:#1018282E;
+$background-gray-100: #b0bbd1;
+$background-gray-800: #1018282e;
 $background-dark: #000000;
-$background-gray-700: #1018280D;
+$background-gray-700: #1018280d;
 $accent-light: #a0dcf6;
 
 // tamanhos de fonte
