--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -15,7 +15,7 @@
         background: $background-color;
         border: none;
         cursor: pointer;
-        transition: 0.3s;
+        transition: all 0.3s ease-in-out;
     }
 }
 
