style: span color trocada quando input está checado para gray

--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -52,6 +52,7 @@
 
         &:checked + span {
             text-decoration: line-through;
+            color: $backgroud-gray-600;
         }
     }
 }
