--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,7 @@ $linear-gradient-accent: linear-gradient(90deg, #d30707, #f05353);
 $background-white: #ffffff;
 $background-light: #d7dde9;
 $background-gray-200: #e7eefb;
+$backgroud-gray-600: #0000008A;
 $background-white: #ffffff;
 $background-grey: #eaecf0;
 $background-gray-100: #b0bbd1;
