--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -20,9 +20,18 @@
 }
 
 .description-task {
+    max-width: 100%;
     display: flex;
     align-items: center;
     gap: 13px;
+
+    // span {
+    //     display: inline-block;
+    //     max-width: 100px; 
+    //     overflow: hidden;
+    //     text-overflow: ellipsis;
+    // }
+
 
     input[type="checkbox"] {
         width: 1.5rem;
