--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -36,6 +36,7 @@
 .tasklist-done {
     width: 100%;
     max-height: 48%;
+    margin-bottom: 1%;
     display: flex;
     align-items: center;
     flex-direction: column;
