--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -6,6 +6,7 @@
     margin-top: 3rem;
     display: flex;
     flex-direction: column;
+    overflow-y: hidden;
 
     @media screen and (max-width: $breakpoint-sm) {
         width: 80%;
