--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .tasklist-container {
