--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -82,9 +82,24 @@
         border: none;
         border-radius: 8px;
         font-weight: $font-weight-medium;
-        padding: 16px, 24px, 16px, 24px;
+        padding: 16px 24px;
         font-size: $font-size-md;
         cursor: pointer;
+
+        &.closeButton {
+            background: $background-gray-200;
+            font-weight: $font-weight-regular;
+        }
+
+        &.addButton {
+            background: $linear-gradient-primary;
+            color: $text-white;
+        }
+
+        &.deleteButton {
+            background: $linear-gradient-accent;
+            color: $text-white;
+        }
 
         @media screen and (max-width: $breakpoint-sm) {
             width: 100%;
@@ -102,17 +117,3 @@
     }
 }
 
-.closeButton {
-    background: $background-gray-200;
-    font-weight: $font-weight-regular;
-}
-
-.addButton {
-    background: $linear-gradient-primary;
-    color: $text-white;
-}
-
-.deleteButton {
-    background: $linear-gradient-accent;
-    color: $text-white;
-}
