--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -6,7 +6,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(1px); 
     display: flex;
     justify-content: center;
     align-items: center;
