style: maxLength diminuido

--- a/src/styles/Tasklist.module.scss
+++ b/src/styles/Tasklist.module.scss
@@ -29,7 +29,8 @@
 
     @media screen and (max-width: $breakpoint-sm) {
         padding: 2rem;
-        min-height: 26.75rem;
+        max-height: 26.75rem;
+        overflow: auto;
     }
 }
 
