--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -5,6 +5,7 @@
     min-height: 3.5rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-radius: 8px;
     padding: 1rem;
     overflow: hidden;
@@ -21,7 +22,6 @@
 }
 
 .description-task {
-    max-width: 97%;
     display: flex;
     align-items: center;
     gap: 13px;
