--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -6,8 +6,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(255, 255, 255, 0.80);
-    backdrop-filter: blur(1px); 
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(1px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -115,6 +115,9 @@
     p {
         color: $text-black-transparent;
         margin-bottom: 2rem;
+
+        @media screen and (max-width: $breakpoint-sm) {
+            max-width: 17rem;
+        }
     }
 }
-
